ensure select options are visible and styled

--- a/src/main.css
+++ b/src/main.css
@@ -190,7 +190,7 @@ body {
   z-index: 1200;
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
-  box-shadow: 0 -4px 6px -1px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 -4px 6px -1px rgb(0 0 0 / 10%);
 }
 
 #sidebar.bottom-sheet.active {
